Tune Groovy dependencies
https://www.baeldung.com/groovy-spock

https://stackoverflow.com/a/75700503/4774651